Fixed icon panning and zooming for upload on mobile.

--- a/frontend/edit_image.css
+++ b/frontend/edit_image.css
@@ -91,7 +91,18 @@
   justify-content: center;
   align-items: center;
 }*/
-
+@media (max-width:1000px) {
+  #edit_icon_modal {
+    position: unset;
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+  }
+  #edit_icon_image_container {
+    width: 320px;
+    height: 320px;
+  }
+}
 
 
 
